--- a/src/html/partials/partials__cards/header.html
+++ b/src/html/partials/partials__cards/header.html
@@ -1,3 +1,3 @@
 <header class="header">
-    <img class="image_header" src="./assets/images/Tarjetas-molonas.svg" alt="tarjetas">
+   <a href="http://localhost:3000/"><img class="image_header" src="./assets/images/Tarjetas-molonas.svg" alt="tarjetas"></a>
 </header>
