--- a/src/html/partials/partials__cards/header.html
+++ b/src/html/partials/partials__cards/header.html
@@ -1,3 +1,3 @@
 <header class="header">
-   <a href="https://beta.adalab.es/project-promo-o-module-2-team-6/"><img class="image_header" src="./assets/images/Tarjetas-molonas.svg" alt="tarjetas"></a>
+   <a href="./index.html"><img class="image_header" src="./assets/images/Tarjetas-molonas.svg" alt="tarjetas"></a>
 </header>
